Fix sticky header z-index

--- a/scss/layouts/template/template-header.scss
+++ b/scss/layouts/template/template-header.scss
@@ -44,7 +44,7 @@
       max-width: calc(100% / 3);
       padding-left: #{ch-get-space(l)};
     }
-  
+
     order: 1;
 
     max-width: calc(100% - #{ch-calc-box-height()} * 3);
@@ -68,7 +68,7 @@
       max-width: calc(100% / 3 * 2);
       margin-right: #{ch-get-space(l)};
     }
-    
+
     order: 2;
 
     max-width: calc(#{ch-calc-box-height()} * 3);
@@ -85,7 +85,7 @@
 
         display: none;
       }
-  
+
       &:hover:focus,
       &:hover,
       &:focus {
@@ -119,7 +119,7 @@
 
     // 4.2. Expanded state
 
-    &.is-expanded {      
+    &.is-expanded {
       @include ch-media(from, desktop) {
         max-width: calc(100% / 3 * 2);
         margin-left: initial;
@@ -156,6 +156,7 @@
 
     position: sticky;
     top: 0;
+    z-index: #{ch-get-z-index(2, 1)};
 
     &:before {
       opacity: 0.95;
